--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <!-- Add Google Font -->
     <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
 </head>
 <body>
     <div class="app-container">
         <div class="app-main">
             <div class="video-call-wrapper">
                 <!-- Video conferencing content goes here -->
+                <div id="videos">
+                  <div id="subscriber"></div>
+                  <div id="publisher"></div>
+              </div>
             </div>
             <div class="video-call-actions">
                 <button class="video-action-button mic"></button>
